# symphony-learn

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  bootstrap.sh  launch.py  pyproject.toml  run_train.sh  skypilot.yaml  train.py  train_spec.py
.claude/skills/update-submodules/: SKILL.md
docs/: distributed.md  installation.md  model.md  skypilot.md
models/: __init__.py
models/gpt_oss/: __init__.py  config_registry.py
models/gpt_oss/train_configs/: debug_model.toml
models/llama3/: __init__.py  config_registry.py
models/llama3/train_configs/: debug_model.toml  llama3_8b.toml
models/llama3_patched/: __init__.py
models/qwen3/: __init__.py  config_registry.py
models/qwen3/train_configs/: qwen3_0.6b.toml  qwen3_1.7b.toml  qwen3_32b.toml  qwen3_moe_debug.toml
models/resnet/: __init__.py  config_registry.py
models/resnet/datasets/: cifar10.py
models/resnet/infra/: parallelize.py
models/resnet/model/: args.py  loss.py  model.py
models/resnet/train_configs/: resnet152_cifar10.toml  resnet18_cifar10.toml  resnet34_cifar10.toml  resnet50_cifar10.toml
skypilot/: lighthouse.yaml  worker.yaml
tests/: assets  test_config_registry.py  test_llama3_dace.py
